Add logging configuration and restructure creating task definition json

--- a/deploy/task-def.json.j2
+++ b/deploy/task-def.json.j2
@@ -12,7 +12,15 @@
                     "protocol": "tcp"
                 }
             ],
-            "essential": true
+            "essential": true,
+            "logConfiguration": {
+                "logDriver": "awslogs",
+                "options": {
+                   "awslogs-group" : "/ecs/{{ app_name }}",
+                   "awslogs-region": "{{ aws_region }}",
+                   "awslogs-stream-prefix": "{{ app_name }}"
+                }
+            }
         }
     ],
     "requiresCompatibilities": [
