--- a/deploy/task-def.json.j2
+++ b/deploy/task-def.json.j2
@@ -18,7 +18,8 @@
                 "options": {
                    "awslogs-group" : "/ecs/{{ app_name }}",
                    "awslogs-region": "{{ aws_region }}",
-                   "awslogs-stream-prefix": "{{ app_name }}"
+                   "awslogs-stream-prefix": "{{ app_name }}",
+                   "awslogs-create-group": true
                 }
             }
         }
