--- a/deploy/task-def.json.j2
+++ b/deploy/task-def.json.j2
@@ -19,7 +19,7 @@
                    "awslogs-group" : "/ecs/{{ app_name }}",
                    "awslogs-region": "{{ aws_region }}",
                    "awslogs-stream-prefix": "{{ app_name }}",
-                   "awslogs-create-group": true
+                   "awslogs-create-group": "true"
                 }
             }
         }
