--- a/deploy/task-def.json.j2
+++ b/deploy/task-def.json.j2
@@ -10,6 +10,17 @@
                     "containerPort": 80,
                     "hostPort": 80,
                     "protocol": "tcp"
+                },
+                {
+                    "containerPort": 22,
+                    "hostPort": 22,
+                    "protocol": "tcp"
+                }
+            ],
+            "secrets": [
+                {
+                    "valueFrom": "arn:aws:ssm:{{ aws.default_region }}:{{ aws.root_account_id }}:parameter/SSH_PUBLIC_KEY",
+                    "name": "SSH_PUBLIC_KEY"
                 }
             ],
             "essential": true,
