WIP again on restructuring services. App back to loading again but still needs a lot more restrucutring

--- a/nick_derobertis_site/landing/components/carousel/carousel_item/component.html
+++ b/nick_derobertis_site/landing/components/carousel/carousel_item/component.html
@@ -4,7 +4,7 @@
     <h1>{{ model.header_text }}</h1>
     <p>{{ model.body_text }}</p>
     <p>
-        {% for button in model.buttons %}
+        {% for button in buttons %}
           {{ embed(button) }}
         {% endfor %}
     </p>
