--- a/nick_derobertis_site/landing/components/story_highlight_pane/component.html
+++ b/nick_derobertis_site/landing/components/story_highlight_pane/component.html
@@ -3,7 +3,7 @@
       <h2 class="featurette-heading">Who am I?</h2>
       <p class="lead">I'm a Finance Ph.D. candidate at the University of Florida. I enjoy the life of a professor while engineering software on the side.</p>
       <div class="story-highlight-pane-button-wrapper">
-        {{ embed(model.button) }}
+        {{ embed(button) }}
       </div>
     </div>
     <div class="col-md-7 order-md-1">
