Split carousel data science + software engineer into separate carousel items

--- a/nick_derobertis_site/landing/components/carousel/component.html
+++ b/nick_derobertis_site/landing/components/carousel/component.html
@@ -1,8 +1,12 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
+    {% for item in items %}
+      {% if loop.first %}
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      {% else %}
+        <li data-target="#myCarousel" data-slide-to="{{ loop.index0 }}"></li>
+      {% endif %}
+    {% endfor %}
   </ol>
   <div class="carousel-inner">
       {% for item in items %}
