Display page title when opening PDFs

--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -63,9 +63,11 @@
             // See nick_derobertis_site.general.widgets.button.PDFButtonBase
             $('body').on('click', '.has-pdf', function(e) {
               var pdfContent = this.dataset.pdfSrc;
+              var title = `<title>${this.dataset.pdfName}</title>`
               var pdfIframe = "<iframe width='100%' height='100%' src='" + pdfContent + "'></iframe>"
               var newPage = window.open();
               newPage.document.open();
+              newPage.document.write(title);
               newPage.document.write(pdfIframe);
               newPage.document.close();
             });
