Make skills with no subskills not underline on hover

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -474,6 +474,10 @@ $course-card-max-width: 300px;
   text-decoration: none;
 }
 
+.no-link:hover {
+  text-decoration: none;
+}
+
 .fa-2-5x {
   font-size: 2.5em;
 }
