--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -731,6 +731,16 @@ $award-image-width: 125px;
   margin-right: 0.5rem;
 }
 
+.contact-not-convinced-button-container {
+  padding: 3rem;
+  padding-bottom: 5rem;
+}
+
+.contact-not-convinced-button-container button {
+  margin: 1rem;
+  width: 8.5rem;
+}
+
 .jumbotron {
   padding-top: 3rem;
   padding-bottom: 3rem;
