Include course website button and update packages

--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -414,6 +414,10 @@ $course-card-max-width: 300px;
   padding: 20px;
 }
 
+.course-syllabus-wrapper button {
+  margin: 0.65rem;
+}
+
 .courses-section-header {
   text-align: center;
   margin-bottom: 1rem;
