--- a/nick_derobertis_site/landing/components/card/component.html
+++ b/nick_derobertis_site/landing/components/card/component.html
@@ -1,8 +1,10 @@
-<div class="home-page-card">
+<div class="home-page-card d-flex flex-column justify-content-between align-items-center">
+  <div class="home-page-card-logo-header-container">
     <i class="{{ model.icon_class_str }} text-tertiary" aria-hidden="true"></i>
     <h2 class="text-tertiary">{{ model.heading }}</h2>
-    <p>{{ model.body_text }}</p>
-    {% if model.link %}
-        {{ embed(button) }}
-    {% endif %}
+  </div>
+  <p>{{ model.body_text }}</p>
+  {% if model.link %}
+    {{ embed(button) }}
+  {% endif %}
 </div>
