--- a/nick_derobertis_site/styles.scss
+++ b/nick_derobertis_site/styles.scss
@@ -263,7 +263,7 @@ $footer-height: 61px;
 }
 
 .story-cover {
-  opacity: 20%;
+  opacity: 25%;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -281,6 +281,21 @@ $footer-height: 61px;
   padding-bottom: 50px;
   color: white;
   position: relative;
+}
+
+.story-header-logo-wrapper {
+  width: 3rem;
+  text-align: center;
+  display: inline-block;
+}
+
+h3.cover-heading {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.cover-heading {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .research-category-img {
