--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -79,6 +79,25 @@
               }, 1000);
             });
 
+            // Set page title
+            // Set for initial page load
+            $( document ).ready(function() {
+              document.title = "Nick DeRobertis' Personal Website";
+            });
+            // Set for after Bokeh render
+            oldLog = console.log;
+            console.log = function (message) {
+              if(message.localeCompare('Bokeh items were rendered successfully') == 0){
+                // Code here gets run after bokeh render completes
+                document.title = "Nick DeRobertis' Personal Website";
+
+                // Reset console logs
+                console.log = oldLog;
+              }
+              oldLog.apply(console, arguments);
+            };
+
+
 
     </script>
 {% endblock %}
