--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -79,6 +79,14 @@
               }, 1000);
             });
 
+            // On clicking a page button, go back to top of page
+            // TODO: use js callback from panel to avoid timeout hack
+            $('body').on('click', '.scroll-to-top-immediately', function(e) {
+              setTimeout(function() {
+                $([document.documentElement, document.body]).scrollTop(0);
+              }, 300);
+            });
+
             // Set page title
             // Set for initial page load
             $( document ).ready(function() {
