--- a/nick_derobertis_site/templates/home/home_template.html
+++ b/nick_derobertis_site/templates/home/home_template.html
@@ -11,6 +11,12 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
 />
+<link
+  rel="icon"
+  href="https://nickderobertis.github.io/derobertis-project-logo/_images/nick_derobertis_site.svg"
+  sizes="any"
+  type="image/svg+xml"
+>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Nick DeRobertis' Personal Website">
