Get header hooked up, bring over assets, set prefix to nds

--- a/frontend/nick-derobertis-site/src/app/app.component.html
+++ b/frontend/nick-derobertis-site/src/app/app.component.html
@@ -33,6 +33,8 @@
   <div class="loader">Loading...</div>
 </div>
 
+<nds-header></nds-header>
+
 <main role="main"></main>
 
 <!-- Bootstrap core JavaScript
