--- a/frontend/nick-derobertis-site/src/app/app.component.html
+++ b/frontend/nick-derobertis-site/src/app/app.component.html
@@ -37,6 +37,8 @@
 
 <main role="main"></main>
 
+<nds-footer></nds-footer>
+
 <!-- Bootstrap core JavaScript
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
