Add home page cards and proper home page structure

--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -1,1 +1,12 @@
-<nds-home-carousel></nds-home-carousel>
+<div class="page-container">
+  <nds-home-carousel></nds-home-carousel>
+  <div class="container marketing">
+    <div class="row">
+      <nds-home-card
+        *ngFor="let model of cardModels"
+        [model]="model"
+        class="col-md-4 home-page-card-wrapper"
+      ></nds-home-card>
+    </div>
+  </div>
+</div>
