Add story highlight pane

--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -8,5 +8,7 @@
         class="col-md-4 home-page-card-wrapper"
       ></nds-home-card>
     </div>
+    <hr class="featurette-divider" />
+    <nds-home-story></nds-home-story>
   </div>
 </div>
