--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -10,5 +10,7 @@
     </div>
     <hr class="featurette-divider" />
     <nds-home-story></nds-home-story>
+    <hr class="featurette-divider" />
+    <nds-skills-pane></nds-skills-pane>
   </div>
 </div>
