--- a/frontend/nick-derobertis-site/src/app/skills/skills-widget/skills-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/skills/skills-widget/skills-widget.component.html
@@ -1,6 +1,6 @@
 <div class="skills-widget-wrapper">
   <nds-skills-dropdown
-    *ngFor="let model of skillDropdownModels"
+    *ngFor="let model of parentSkillDropdowns"
     [model]="model"
   ></nds-skills-dropdown>
 </div>
