--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -11,6 +11,7 @@
     <hr class="featurette-divider" />
     <nds-home-story></nds-home-story>
     <hr class="featurette-divider" />
-    <nds-skills-pane></nds-skills-pane>
+    <nds-skills-pane id="skills"></nds-skills-pane>
+    <hr class="featurette-divider" />
   </div>
 </div>
