--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -7,6 +7,10 @@ body {
   color: #5a5a5a;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
 
