Add awards frontend

--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -13,5 +13,7 @@
     <hr class="featurette-divider" />
     <nds-skills-pane id="skills"></nds-skills-pane>
     <hr class="featurette-divider" />
+    <nds-awards-pane></nds-awards-pane>
+    <hr class="featurette-divider" />
   </div>
 </div>
