Add contact pane, home page finished minus polish

--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -15,5 +15,6 @@
     <hr class="featurette-divider" />
     <nds-awards-pane></nds-awards-pane>
     <hr class="featurette-divider" />
+    <nds-contact-pane></nds-contact-pane>
   </div>
 </div>
