Add research banner

--- a/frontend/nick-derobertis-site/src/app/research/research-page/research-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-page/research-page.component.html
@@ -1,1 +1,5 @@
-<p>research-page works!</p>
+<div class="page-container">
+  <nds-research-banner></nds-research-banner>
+
+  <div class="research-pane-container"></div>
+</div>
