--- a/frontend/nick-derobertis-site/src/app/research/research-page/research-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-page/research-page.component.html
@@ -1,5 +1,11 @@
 <div class="page-container">
   <nds-research-banner></nds-research-banner>
-
-  <div class="research-pane-container"></div>
+  <nds-loading-spinner *ngIf="!model"></nds-loading-spinner>
+  <div class="research-pane-container" *ngIf="model">
+    <nds-research-project-pane
+      *ngFor="let paneModel of model.allResearch; odd as isOdd"
+      [model]="paneModel"
+      [ngClass]="{ 'research-pane-offset': isOdd }"
+    ></nds-research-project-pane>
+  </div>
 </div>
