--- a/frontend/nick-derobertis-site/src/app/software/software-page/software-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/software/software-page/software-page.component.html
@@ -1,1 +1,7 @@
-<p>software-page works!</p>
+<nds-software-banner></nds-software-banner>
+
+<div class="album py-5 bg-background">
+  <div class="container">
+    <div class="row"></div>
+  </div>
+</div>
