--- a/frontend/nick-derobertis-site/src/app/software/software-page/software-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/software/software-page/software-page.component.html
@@ -2,6 +2,13 @@
 
 <div class="album py-5 bg-background">
   <div class="container">
-    <div class="row"></div>
+    <nds-loading-spinner *ngIf="!model"></nds-loading-spinner>
+    <div class="row" *ngIf="model">
+      <nds-software-card
+        *ngFor="let projectModel of model.projectModels"
+        [model]="projectModel"
+        class="col-lg-4 pl-3 pr-3"
+      ></nds-software-card>
+    </div>
   </div>
 </div>
