--- a/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/story/story-page/story-page.component.html
@@ -18,7 +18,7 @@
     <div class="lead p">
       When taking on a project, I always try to learn something new and usually
       develop some tools along the way. In trying to maximize my impact, I have
-      open-sourced <a routerLink="software">many of these tools.</a> My hope is
+      open-sourced <a routerLink="/software">many of these tools.</a> My hope is
       that the net productivity gain to the finance, data science, and web
       development industries from open-sourcing these tools will be far greater
       than the amount of work I could produce alone. If everyone agrees to
