Get all links working properly, remove scrolling jQuery, adjust formatting of header

--- a/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
+++ b/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
@@ -1,4 +1,8 @@
 <footer class="footer">
-  <p class="float-right"><a href="#">Back to top</a></p>
+  <p class="float-right">
+    <a (click)="scrollToTop($event)" class="text-primary cursor-pointer"
+      >Back to top</a
+    >
+  </p>
   <p>&copy; {{ copyright }} Nick DeRobertis</p>
 </footer>
