--- a/frontend/nick-derobertis-site/src/app/header/header/header.component.html
+++ b/frontend/nick-derobertis-site/src/app/header/header/header.component.html
@@ -1,11 +1,13 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <img
-      src="https://nickderobertis.github.io/derobertis-project-logo/_images/nick_derobertis_site.svg"
-      alt="Nick DeRobertis Logo"
-      class="logo"
-    />
-    <a class="navbar-brand" href="#">Nick DeRobertis</a>
+    <a class="navbar-brand" routerLink="/">
+      <img
+        src="https://nickderobertis.github.io/derobertis-project-logo/_images/nick_derobertis_site.svg"
+        alt="Nick DeRobertis Logo"
+        class="logo"
+      />
+      Nick DeRobertis
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -22,13 +24,15 @@
         <div class="d-contents d-md-block">
           <a *ngFor="let link of routerLinks" [routerLink]="link.link">
             <button
-              class="btn btn-primary scroll-to-top-immediately btn-narrow"
+              class="header-btn btn btn-primary scroll-to-top-immediately btn-narrow"
             >
               {{ link.title }}
             </button>
           </a>
           <a *ngFor="let link of normalLinks" href="{{ link.link }}">
-            <button class="btn btn-primary btn-narrow">{{ link.title }}</button>
+            <button class="header-btn btn btn-primary btn-narrow">
+              {{ link.title }}
+            </button>
           </a>
         </div>
         <a href="https://github.com/nickderobertis" class="nav-icon">
