Adjust sizing of software card on courses page

--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -536,7 +536,7 @@ $course-card-max-width: 300px;
 }
 
 .courses-software-wrapper .software-card {
-  min-height: unset;
+  min-height: 350px;
 }
 
 .courses-software-wrapper .software-card-img-placeholder {
