--- a/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
+++ b/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
@@ -1,8 +1,9 @@
-<footer class="footer">
-  <p class="float-right">
+<footer class="footer d-flex justify-content-between align-items-center">
+  <span>&copy; {{ copyright }} Nick DeRobertis</span>
+  <span class="float-right">
+    <a href="{{ apiDocsUrl }}">API</a>
     <a (click)="scrollToTop($event)" class="text-primary cursor-pointer"
       >Back to top</a
     >
-  </p>
-  <p>&copy; {{ copyright }} Nick DeRobertis</p>
+  </span>
 </footer>
