--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -169,7 +169,7 @@ html {
   min-height: $height;
 }
 
-@mixin page-banner-img($opacity: 35%, $height: 30rem) {
+@mixin page-banner-img($opacity: 0.35, $height: 30rem) {
   position: absolute;
   top: 0;
   left: 0;
@@ -190,7 +190,7 @@ html {
 }
 
 .software-banner > img {
-  @include page-banner-img($opacity: 50%);
+  @include page-banner-img($opacity: 0.5);
 }
 
 .software-banner-content-container {
@@ -354,7 +354,7 @@ $footer-height: 61px;
 }
 
 .story-cover {
-  opacity: 25%;
+  opacity: 0.25;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -430,7 +430,7 @@ h3 + h4.cover-heading {
 }
 
 .courses-banner > img {
-  @include page-banner-img($opacity: 40%);
+  @include page-banner-img($opacity: 0.4);
 }
 
 .courses-banner-content-container {
@@ -651,7 +651,7 @@ body {
 }
 
 .carousel-item > img {
-  opacity: 30%;
+  opacity: 0.3;
   object-position: center;
   object-fit: cover;
 }
