Try restructuring email link to avoid https mixed content error

--- a/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
@@ -1,15 +1,16 @@
 <div class="row featurette">
   <div class="col-md-12 d-flex flex-column align-items-center">
     <h2 class="featurette-heading contact-heading">Want to Hire Me?</h2>
-    <form
-      action="mailto:{{ personalDetails.email }}"
+    <a
+      target="_top"
+      href="mailto:{{ personalDetails.email }}"
       class="contact-button-wrapper"
     >
-      <button type="submit" class="btn btn-primary btn-raised btn-lg">
+      <button class="btn btn-primary btn-raised btn-lg">
         <i class="far fa-envelope contact-button-icon"></i>
         Send me an Email
       </button>
-    </form>
+    </a>
   </div>
   <div class="col-md-12 d-flex flex-column align-items-center">
     <h2 class="featurette-heading contact-heading">Not Convinced?</h2>
