Add full setup for reporting gtag events. Add click event tracking directive and apply for view CV in header

--- a/frontend/nick-derobertis-site/src/app/header/header/header.component.html
+++ b/frontend/nick-derobertis-site/src/app/header/header/header.component.html
@@ -29,7 +29,12 @@
               {{ link.title }}
             </button>
           </a>
-          <a *ngFor="let link of normalLinks" href="{{ link.link }}">
+          <a
+            *ngFor="let link of normalLinks"
+            href="{{ link.link }}"
+            ndsClickEvent
+            [event]="viewCVEvent"
+          >
             <button class="header-btn btn btn-primary btn-narrow">
               {{ link.title }}
             </button>
