Implement view CV event on remaining pages

--- a/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
@@ -22,7 +22,12 @@
           {{ link.title }}
         </button>
       </a>
-      <a *ngFor="let link of normalLinks" href="{{ link.link }}">
+      <a
+        *ngFor="let link of normalLinks"
+        href="{{ link.link }}"
+        ndsClickEvent
+        [event]="viewCVEvent"
+      >
         <button class="btn btn-primary btn-raised">{{ link.title }}</button>
       </a>
     </div>
