--- a/frontend/nick-derobertis-site/src/app/research/research-banner/research-banner.component.html
+++ b/frontend/nick-derobertis-site/src/app/research/research-banner/research-banner.component.html
@@ -10,7 +10,11 @@
       finance. Find my projects here or on my CV.
     </p>
     <p>
-      <a href="assets/pdfs/generated/Nick DeRobertis CV.pdf">
+      <a
+        href="assets/pdfs/generated/Nick DeRobertis CV.pdf"
+        ndsClickEvent
+        [event]="viewCVEvent"
+      >
         <button
           class="has-pdf btn btn-primary border border-primary bg-offset-dark"
         >
