Track Github visits

--- a/frontend/nick-derobertis-site/src/app/header/header/header.component.html
+++ b/frontend/nick-derobertis-site/src/app/header/header/header.component.html
@@ -40,7 +40,12 @@
             </button>
           </a>
         </div>
-        <a href="https://github.com/nickderobertis" class="nav-icon">
+        <a
+          href="https://github.com/nickderobertis"
+          class="nav-icon"
+          ndsClickEvent
+          [event]="viewGithubEvent"
+        >
           <i class="fab fa-github fa-lg"></i>
         </a>
       </ul>
