--- a/frontend/nick-derobertis-site/src/app/software/software-banner/software-banner.component.html
+++ b/frontend/nick-derobertis-site/src/app/software/software-banner/software-banner.component.html
@@ -13,6 +13,8 @@
       <a
         href="https://github.com/nickderobertis"
         class="btn btn-primary border border-primary my-2 bg-offset-dark"
+        ndsClickEvent
+        [event]="viewGithubEvent"
         >View on Github</a
       >
     </p>
