--- a/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/contact-pane/contact-pane.component.html
@@ -5,6 +5,8 @@
       target="_top"
       href="mailto:{{ personalDetails.email }}"
       class="contact-button-wrapper"
+      ndsClickEvent
+      [event]="sendMeEmailEvent"
     >
       <button class="btn btn-primary btn-raised btn-lg">
         <i class="far fa-envelope contact-button-icon"></i>
