--- a/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
+++ b/frontend/nick-derobertis-site/src/app/footer/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer d-flex justify-content-between align-items-center">
   <span>&copy; {{ copyright }} Nick DeRobertis</span>
   <span class="float-right">
-    <a href="{{ apiDocsUrl }}">API</a>
+    <a href="{{ apiDocsUrl }}" ndsClickEvent [event]="viewAPIEvent">API</a>
     <a (click)="scrollToTop($event)" class="text-primary cursor-pointer"
       >Back to top</a
     >
