Add item view events and track skill clicks with them

--- a/frontend/nick-derobertis-site/src/app/skills/skills-widget/skills-dropdown/skills-dropdown.component.html
+++ b/frontend/nick-derobertis-site/src/app/skills/skills-widget/skills-dropdown/skills-dropdown.component.html
@@ -14,7 +14,7 @@
     data-flip="false"
     aria-haspopup="true"
     aria-expanded="false"
-    (click)="loadChildSkillsInChildren($event)"
+    (click)="handleClick($event)"
   >
     <div class="skill-dropdown-wrapper">
       <div class="skill-name">
