Adjust padding to research pane sides to always be 10% so it looks good on both large and small views

--- a/frontend/nick-derobertis-site/src/styles.scss
+++ b/frontend/nick-derobertis-site/src/styles.scss
@@ -943,7 +943,7 @@ $research-panel-offset-fg: var(--tertiary-offset);
 }
 
 .research-pane {
-  padding: 3rem;
+  padding: 10%;
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
