Set up initial structure of timeline with data, no actual widget yet

--- a/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/home-page/home-page.component.html
@@ -13,6 +13,8 @@
     <hr class="featurette-divider" />
     <nds-skills-pane id="skills"></nds-skills-pane>
     <hr class="featurette-divider" />
+    <nds-timeline-pane></nds-timeline-pane>
+    <hr class="featurette-divider" />
     <nds-awards-pane></nds-awards-pane>
     <hr class="featurette-divider" />
     <nds-contact-pane></nds-contact-pane>
