Get google chart set up, but not working yet due to angular universal

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -1,1 +1,9 @@
-<p>timeline-widget works!</p>
+<div class="timeline-widget-container">
+  <nds-loading-spinner *ngIf="loading"></nds-loading-spinner>
+  <google-chart
+    *ngIf="!loading"
+    [type]="chartType"
+    [data]="model.toChartData()"
+    [columns]="model.chartColumns"
+  ></google-chart>
+</div>
