Get google timeline chart rendering, needs a rework around ids, tooltips, and styling

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -1,9 +1,11 @@
 <div class="timeline-widget-container">
   <nds-loading-spinner *ngIf="loading"></nds-loading-spinner>
-  <google-chart
-    *ngIf="!loading"
-    [type]="chartType"
-    [data]="model.toChartData()"
-    [columns]="model.chartColumns"
-  ></google-chart>
+  <div *ngIf="!loading">
+    <google-chart
+      *ndsAppShellNoRender
+      [type]="chartType"
+      [data]="chartData"
+      [columns]="model.chartColumns"
+    ></google-chart>
+  </div>
 </div>
