Custom HTML tooltip working

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -6,6 +6,7 @@
       [type]="chartType"
       [data]="chartData"
       [columns]="model.chartColumns"
+      [options]="{ tooltip: { isHtml: true } }"
     ></google-chart>
   </div>
 </div>
