Get dates coming to description

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -12,6 +12,11 @@
     <div *ngIf="selectedModel">
       <h5>{{ selectedModel.organization }}</h5>
       <h6>{{ selectedModel.role }}</h6>
+      <div>
+        <span>{{ selectedModel.beginDateStr }}</span>
+        <span>-</span>
+        <span>{{ selectedModel.endDateStr }}</span>
+      </div>
       <ul>
         <li *ngFor="let desc of selectedModel.description">{{ desc }}</li>
       </ul>
