Slight style updates for chart

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -7,6 +7,7 @@
       [data]="chartData"
       [columns]="model.chartColumns"
       [options]="{ tooltip: { trigger: 'none' } }"
+      [dynamicResize]="true"
       (mouseover)="onMouseOver($event)"
     ></google-chart>
     <div *ngIf="selectedModel">
