Auto chart height

--- a/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
+++ b/frontend/nick-derobertis-site/src/app/home/timeline-pane/timeline-widget/timeline-widget.component.html
@@ -8,6 +8,7 @@
       [columns]="model.chartColumns"
       [options]="{ tooltip: { trigger: 'none' } }"
       [dynamicResize]="true"
+      [height]="model.chartHeight"
       (mouseover)="onMouseOver($event)"
     ></google-chart>
     <div *ngIf="selectedModel">
